# carpy

./: .gitignore  CONTRIBUTORS_GUIDE.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.circleci/: config.yml
_tests_bkup/: test_fluiddynamics.py
bkup_docs/source/dev/: verify horseshoevortexmodel.ipynb
bkup_docs/source/theory/: Constraint Analysis 1 - Manoeuvring Flight.ipynb  Constraint Analysis 2 - Takeoff Sequence.ipynb
bkup_docs/source/user/: L0 - Constants for Engineers.ipynb  L0 - Quantity and Unit Conversions.ipynb  L1 - Atmosphere Models.ipynb  L1 - Compressible Gas Dynamics.ipynb  L1 - Modelling Aerofoil Sections.ipynb  L1 - Predicting Wing Lift and Drag.ipynb  README.md
branding/font/: info.txt
docs/: README.md  ipynb_wizard.py
docs/source/demo/: EOS Water.ipynb  Equations of State.ipynb  Static Atmosphere Models.ipynb
src/carpy/: __init__.py
src/carpy_bkup/: __init__.py
tests/: __init__.py  test_aerodynamics_aerofoil.py  test_aerodynamics_wing.py  test_chemistry.py  test_environment.py  test_environment_airfields.py  test_environment_atmospheres.py  test_environment_weather.py  test_gaskinetics.py  test_gaskinetics_dynamics.py  test_geometry.py  test_physchem.py  test_physicalchem.py  test_powerplant.py  test_structures_indexing.py  test_structures_stations.py  test_utility.py  test_utility_maths.py  test_utility_miscellaneous.py  test_utility_unitconversion.py  test_utility_vanity.py
tests_bkup/: test_aerodynamics_wing.py  test_environment_atmospheres.py  test_environment_weather.py  test_geometry.py
(+284 files in other folders)
